--- a/dreambooth_runpod_joepenna.ipynb
+++ b/dreambooth_runpod_joepenna.ipynb
@@ -385,56 +385,22 @@
     "!pip install captionizer==1.0.1\n",
     "\n",
     "# Download Novel Ai Full Checkpoint\n",
-    "#!gdown https://drive.google.com/uc?id=1uRb9WVfjuIi2wyki2NBynEDefWQ3gnxl\n",
+    "!gdown https://drive.google.com/uc?id=1uRb9WVfjuIi2wyki2NBynEDefWQ3gnxl\n",
     "!aria2c https://cdn.discordapp.com/attachments/1030033503695421541/1034744921791401984/xformers-0.0.14.dev0-cp38-cp38-linux_x86_64.whl\n",
     "!pip install xformers-0.0.14.dev0-cp38-cp38-linux_x86_64.whl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "af8b88f8-4188-4c9b-904e-d7925492d180",
+   "execution_count": null,
+   "id": "d22c968b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting dill\n",
-      "  Using cached dill-0.3.6-py3-none-any.whl (110 kB)\n",
-      "\u001b[31mERROR: datasets 2.6.1 has requirement dill<0.3.6, but you'll have dill 0.3.6 which is incompatible.\u001b[0m\n",
-      "Installing collected packages: dill\n",
-      "  Attempting uninstall: dill\n",
-      "    Found existing installation: dill 0.3.5.1\n",
-      "    Uninstalling dill-0.3.5.1:\n",
-      "      Successfully uninstalled dill-0.3.5.1\n",
-      "Successfully installed dill-0.3.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install --upgrade dill"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "cc7af48c-f388-42eb-bc66-e2a88eb45b45",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading...\n",
-      "From: https://drive.google.com/uc?id=1OLb2ZkwDzo_WKHMyzJl6fL4qQ_Pq17Dv\n",
-      "To: /workspace/Dreambooth-Stable-Diffusion/2022-10-26T17-17-55_momoco_40_training_images_4000_max_training_steps_momoco_token_girl_class_word.ckpt\n",
-      "100%|██████████████████████████████████████| 2.13G/2.13G [00:22<00:00, 93.7MB/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "!gdown https://drive.google.com/uc?id=1OLb2ZkwDzo_WKHMyzJl6fL4qQ_Pq17Dv"
+    "# Download RegImgs\n",
+    "!gdown https://drive.google.com/uc?id=1ixo8QE0CThFmLm2YsaDYCaWrJXADKu1X\n",
+    "!apt-get install -y zip\n",
+    "!unzip regularization.zip -d ./regularization_images/"
    ]
   },
   {
@@ -4335,7 +4301,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -4349,11 +4315,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "8d2de1e3fee56e19e939027d243a10545dab4a9e8598123a65955d48998f60ec"
    }
   }
  },
